# greentic-x

./: .foxguard.yml  .gitignore  Cargo.toml  README.md  SECURITY.md  gtc-extension.json  rust-toolchain.toml  rustfmt.toml
.codex/: PR-02-types-and-events.md  PR-06-examples-apps.md  PR-GX-02-core-specs-and-catalog.md  PR-GX-04-tooling-designer-simulator.md  PR-GX-CATALOG-01.md  PR-GX-TOOLCHAIN-00.md  PR-GX-TOOLCHAIN-01.md  PR-GX-TOOLCHAIN-02.md  PR-GX-TOOLCHAIN-03.md  PR-GX-TOOLCHAIN-04.md  PR-GX-TOOLCHAIN-05.md  PR-GX-TOOLCHAIN-06.md  PR-GX-TOOLCHAIN-07.md  PR-GX-TOOLCHAIN-SERIES.md  PR-GX-WIZ-2.md  repo_overview.md
.codex/done/: PR-01-repo-bootstrap.md  PR-03-contracts-crate-and-reference-contracts.md  PR-04-runtime-core.md  PR-05-ops-crate-and-reference-ops.md  PR-07-docs-architecture-and-governance.md  PR-GX-01-runtime-foundations.md  PR-GX-03-flow-executor-evidence-view.md  PR-GX-05-observability-profile-and-reference-examples.md  PR-GX-WIZ.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  dev-publish.yml  publish.yml
.i18n/: translator-state.json
assistant_templates/: network-assistant.phase1.json
catalog/core/contracts/: README.md  index.json
catalog/core/flow-templates/: README.md  (+1 more)
catalog/overlays/: default.json
catalog/provider-presets/: webchat-gui.json
catalog/templates/: assistant.network.phase1.json
ci/: check_packs.sh  check_specs_catalog.py  install_greentic_pack.sh  local_check.sh  publishable_crates.py
contracts/case/: README.md
contracts/outcome/: contract.json
crates/greentic-x-contracts/: Cargo.toml  LICENSE
crates/greentic-x-contracts/src/: lib.rs
crates/greentic-x-events/: Cargo.toml
crates/greentic-x-events/src/: lib.rs
crates/greentic-x-flow/: Cargo.toml
crates/greentic-x-flow/src/: lib.rs
crates/greentic-x-ops/: Cargo.toml
crates/greentic-x-ops/src/: lib.rs
crates/greentic-x-runtime/: Cargo.toml
crates/greentic-x-runtime/src/: lib.rs
crates/greentic-x-types/: Cargo.toml
crates/greentic-x-types/src/: lib.rs
crates/gx/: Cargo.toml  build.rs
crates/gx/i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  locales.json  lt.json  lv.json  (+27 more)
crates/gx/i18n/wizard/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
crates/gx/questions/: composition.json  core.json  providers.json  wizard.form.json
crates/gx/schemas/: setup-profile.schema.json
crates/gx/src/: catalog_repo.rs  i18n.rs  lib.rs  main.rs  profile.rs
crates/gx/src/wizard/: answers.rs  bundle.rs  catalog.rs  compose.rs  handoff.rs  intent_to_pack.rs  launcher.rs  mod.rs  plan.rs  qa.rs  remote.rs  template.rs
crates/gx/tests/: wizard_compat.rs
crates/gx/tests/fixtures/: network-assistant.answers.json  telco-catalog.json  telco-network-assistant.answers.json
docs/: README.md  architecture.md  authoring-profile-observability.md  catalog-repos.md  contracts.md  core-catalog.md  evidence-and-view-separation.md  examples.md  flow-executor.md  governance.md  gtc-integration.md  how-to-build-a-downstream-solution.md  observability-profile-vs-raw-flows.md  ops.md  parallelism-and-join-semantics.md  reference-examples.md  runtime-boundary.md  runtime-overview.md  runtime.md  simulation-workflow.md  specs-overview.md  telco-gtc-e2e-smoke.md  tooling-overview.md  why-six-primitives.md  wizard-audit.md
docs/architecture/: gx-to-pack-flow.md
docs/audit/: bundle.md  cap.md  greentic-dev.md  gtc-wizard.md  pack.md  qa-lib.md  summary.md
docs/migration/: gx-composition-only.md  gx-pack-bundle-deprecation.md
examples/change-correlation-generic/: README.md  expected.evidence.json  expected.view.json  flow.json  input.json  manifest.json  stubs.json
examples/end-to-end-demo/: Cargo.toml  README.md
examples/end-to-end-demo/src/: main.rs
examples/entity-utilisation-generic/: README.md  expected.evidence.json  expected.view.json  flow.json  input.json  manifest.json  profile.json  stubs.json
examples/root-cause-split-join-generic/: README.md  expected.evidence.json  expected.view.json  flow.json  input.json  manifest.json  profile.json  stubs.json
examples/simple-case-app/: Cargo.toml  README.md
examples/simple-case-app/src/: main.rs
examples/simple-playbook-app/: Cargo.toml  README.md
examples/simple-playbook-app/src/: main.rs
examples/top-contributors-generic/: README.md  expected.evidence.json  expected.view.json  flow.json  input.json  manifest.json  profile.json  stubs.json
flows/example-flow/: README.md  flow.json  manifest.json  stubs.json
ops/approval-basic/: README.md  source.md
ops/playbook-select/: op.json
ops/rca-basic/: README.md
packs/: README.md
packs/_wizard/: greentic-x-contracts-reference.answers.json  greentic-x-ops-reference.answers.json  greentic-x-runtime-capability.answers.json
packs/greentic-x-contracts-reference/: README.md  pack.lock.cbor  pack.yaml
packs/greentic-x-ops-reference/: README.md  pack.yaml
packs/greentic-x-runtime-capability-reference/: README.md  pack.yaml
schemas/: assistant-template.schema.json  bundle-plan.schema.json  catalog-entry.schema.json  catalog-index.schema.json  overlay.schema.json  pack-input.schema.json  provider-preset.schema.json  solution-intent.schema.json  solution-manifest.schema.json  toolchain-handoff.schema.json
setup_profiles/: network-assistant.phase1.json
templates/assistant/: basic-empty.json  network-phase1.json
templates/domain/: basic-empty.json  network-phase1.json
tools/: i18n.sh
(+104 files in other folders)
