[package]
name = "greentic-x-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/greentic-x-contracts"
readme.workspace = true
description = "Bootstrap contract model crate for the Greentic-X workspace."
authors.workspace = true

[dependencies]
greentic-x-events = { version = "0.4.1", path = "../greentic-x-events" }
greentic-x-types = { version = "0.4.1", path = "../greentic-x-types" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
