[package]
name = "greentic-x-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/greentic-x-contracts"
readme.workspace = true
description = "Bootstrap contract model crate for the Greentic-X workspace."
authors.workspace = true

[dependencies]
greentic-x-events.workspace = true
greentic-x-types.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
