[package]
name = "greentic-x-events"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/greentic-x-events"
readme.workspace = true
description = "Bootstrap event model crate for the Greentic-X workspace."
authors.workspace = true

[dependencies]
greentic-x-types.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
