[package]
name = "greentic-x-flow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/greentic-x-flow"
readme.workspace = true
authors.workspace = true
description = "Bootstrap flow execution crate for the Greentic-X workspace."

[dependencies]
greentic-x-ops.workspace = true
greentic-x-runtime.workspace = true
greentic-x-types.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
