[package]
name = "greentic-x-ops"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/greentic-x-ops"
readme.workspace = true
description = "Bootstrap op model crate for the Greentic-X workspace."
publish = false

[dependencies]
greentic-x-types = { path = "../greentic-x-types" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
