[package]
name = "greentic-x-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/greentic-x-runtime"
readme.workspace = true
description = "Bootstrap runtime core crate for the Greentic-X workspace."
publish = false

[dependencies]
greentic-x-contracts = { path = "../greentic-x-contracts" }
greentic-x-events = { path = "../greentic-x-events" }
greentic-x-ops = { path = "../greentic-x-ops" }
greentic-x-types = { path = "../greentic-x-types" }
serde_json.workspace = true

[lints]
workspace = true
