[package]
name = "greentic-x-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/greentic-x-runtime"
readme.workspace = true
description = "Bootstrap runtime core crate for the Greentic-X workspace."
authors.workspace = true

[dependencies]
greentic-x-contracts = { version = "0.4.1", path = "../greentic-x-contracts" }
greentic-x-events = { version = "0.4.1", path = "../greentic-x-events" }
greentic-x-ops = { version = "0.4.1", path = "../greentic-x-ops" }
greentic-x-types = { version = "0.4.1", path = "../greentic-x-types" }
jsonschema.workspace = true
serde_json.workspace = true

[lints]
workspace = true
