[package]
name = "greentic-x-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/greentic-x-runtime"
readme.workspace = true
description = "Bootstrap runtime core crate for the Greentic-X workspace."
authors.workspace = true

[dependencies]
greentic-x-contracts.workspace = true
greentic-x-events.workspace = true
greentic-x-ops.workspace = true
greentic-x-types.workspace = true
jsonschema.workspace = true
serde_json.workspace = true

[lints]
workspace = true
