[package]
name = "greentic-x-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/greentic-x-types"
readme.workspace = true
description = "Bootstrap shared type vocabulary crate for the Greentic-X workspace."
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
