[package]
name = "gx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
publish = false
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
greentic-distributor-client = { version = "0.4", default-features = false, features = ["dist-client", "pack-fetch"] }
greentic-qa-lib = "0.4"
greentic-x-contracts = { path = "../greentic-x-contracts" }
greentic-x-flow = { path = "../greentic-x-flow" }
greentic-x-ops = { path = "../greentic-x-ops" }
greentic-x-types = { path = "../greentic-x-types" }
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
serde_json.workspace = true

[lints]
workspace = true
