[package]
name = "greentic-x"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/greentic-x"
readme.workspace = true
authors.workspace = true
description = "Greentic-X CLI for catalog-driven composition, scaffolding, validation, and simulation."
build = "build.rs"

[lib]
name = "gx"
path = "src/lib.rs"

[[bin]]
name = "greentic-x"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
clap.workspace = true
flate2.workspace = true
greentic-distributor-client.workspace = true
greentic-qa-lib.workspace = true
greentic-x-contracts.workspace = true
greentic-x-flow.workspace = true
greentic-x-ops.workspace = true
greentic-x-types.workspace = true
jsonschema.workspace = true
oci-distribution.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
serde_json.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "greentic-x{ binary-ext }"

[lints]
workspace = true
