[package]
name = "end-to-end-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Runnable Greentic-X end-to-end demo covering contracts, runtime, and reference ops."
publish = false

[dependencies]
greentic-x-contracts = { path = "../../crates/greentic-x-contracts" }
greentic-x-ops = { path = "../../crates/greentic-x-ops" }
greentic-x-runtime = { path = "../../crates/greentic-x-runtime" }
greentic-x-types = { path = "../../crates/greentic-x-types" }
serde_json.workspace = true

[lints]
workspace = true
