[package]
name = "simple-playbook-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Runnable Greentic-X example showing playbook selection and execution tracking."
publish = false

[dependencies]
greentic-x-contracts.workspace = true
greentic-x-ops.workspace = true
greentic-x-runtime.workspace = true
greentic-x-types.workspace = true
serde_json.workspace = true

[lints]
workspace = true
